Inversioning of Commit Histories